<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Struct_EndDrive" Id="{617699f5-6a91-45fe-9d4b-a382a805f7b6}">
    <Declaration><![CDATA[TYPE Struct_EndDrive :
STRUCT
    WC_State 				AT %I* 	:    	BIT;            // 参数可用标志 监控上电状态 1为断电 0为供电       
	EC_State 	AT %I* 	:    	UINT;            //  slave op state                    
	
   // systerm bar
	sNetID				AT %I*	:  	 	AmsNetID;
	nSlaveAddr			AT %I*	:  	 	UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>